--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,10 +18,12 @@
     "@prisma/client": "^5.20.0",
     "dotenv": "^16.4.5",
     "hono": "^4.6.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
