--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
+    "eslint": "^9.12.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
